--- a/templates/blog2/post_details.html
+++ b/templates/blog2/post_details.html
@@ -1,5 +1,4 @@
 {% extends "blog/base.html" %}
-
 {% block content %}
     <h1>{{ object.title }}</h1>
     <p>by {{ object.author }} on {{ object.date_posted }}</p>
@@ -9,4 +8,36 @@
         <a href="{% url 'post-delete' object.pk %}" class="btn btn-danger">Delete</a>
     {% endif %}
     <a href="/" class="btn btn-primary">Back</a>
+    <hr>
+    <a href="{% url 'like-post' object.pk %}" class="btn btn-primary">
+        {% if user in object.likes.all %}
+            Unlike
+        {% else %}
+            Like
+        {% endif %}
+    </a>
+    <span>{{ object.likes.count }} Likes</span>
+    <hr>
+    <h3>Comments</h3>
+    {% for comment in comments %}
+        <div class="media mb-3">
+            <img src="{{ comment.author.profile.image.url }}" class="mr-3" width="50" height="50" alt="{{ comment.author }}">
+            <div class="media-body">
+                <h5 class="mt-0">{{ comment.author }}</h5>
+                {{ comment.content }}
+                <p><small class="text-muted">Posted on {{ comment.date_posted }}</small></p>
+            </div>
+        </div>
+    {% endfor %}
+    {% if user.is_authenticated %}
+        <h3>Leave a comment:</h3>
+        <form method="post">
+            {% csrf_token %}
+            {{ comment_form.as_p }}
+            <button type="submit" class="btn btn-primary">Post Comment</button>
+        </form>
+    {% else %}
+        <p>You need to <a href="{% url 'login' %}">login</a> to leave a comment.</p>
+    {% endif %}
 {% endblock %}
+
